# MCU_FW_DL_ODM_COB

./: MTool.sln
MCU_FW_DL_ODM_V1.0.0/: FactoryInfo.txt  Multi_Config.ini  Params_Main.ini  Tongji.ini  port_trace.txt
MCU_FW_DL_ODM_V1.0.0/Jlink_Newest/: Current_MCU.txt
MCU_FW_DL_ODM_V1.0.0/Params/: eco.ini
MCU_FW_DL_ODM_V1.0.0/QDE006/: AM151_00_00.00.23.hex  DBG_REL_18.00.25-ABF23E56.hex  REL_01.00.40-70833c20.hex  version.txt
MCU_FW_DL_ODM_V1.0.0/UFlashTool/: FlashToolDll.ini
MCU_FW_DL_ODM_V1.0.0/Update/: DLL_Update.ini  Tool_Update.ini
MCU_FW_DL_ODM_V1.0.0/log/: 2023-9-6-10-48-15-log.rtf  2023-9-6-10-48-15-log1.txt  2023-9-6-10-48-15-log3.txt
MT/: ARM_OP_ALTAIR.cpp  ARM_OP_ALTAIR.h  ARM_OP_ASR.cpp  ARM_OP_ASR.h  ARM_OP_BEKEN.cpp  ARM_OP_BEKEN.h  ARM_OP_EIGEN.cpp  ARM_OP_EIGEN.h  ARM_OP_HUAWEI.cpp  ARM_OP_HUAWEI.h  ARM_OP_INTEL.cpp  ARM_OP_INTEL.h  ARM_OP_QCM.cpp  ARM_OP_QCM.h  ARM_OP_RDA.cpp  ARM_OP_RDA.h  ARM_OP_SILABS.cpp  ARM_OP_SILABS.h  ARM_OP_UNISOC.cpp  ARM_OP_UNISOC.h  ARM_OP_XINYI.cpp  ARM_OP_XINYI.h  ActivateMbnOpName.cpp  ActivateMbnOpName.h  AppDefine.h  ClassDiagram1.cd  Com_Port.cpp  Com_Port.h  Com_Thr_Port.cpp  Com_Thr_Port.h  ConfigDig.cpp  ConfigDig.h  DM_TO_AT.lib  DOWNLOAD.H  Dlg_Change_Password.cpp  Dlg_Change_Password.h  Dlg_Config_Multi.cpp  Dlg_Config_Multi.h  Dlg_Example.cpp  Dlg_Example.h  (+136 more)
MT/libusb-1.0/libusb/: CMakeLists.txt  core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb-1.0.aps  libusb.h  libusbi.h  strerror.c  sync.c
MT/libusb-win32/: CMakeLists.txt  libusb0.def
MT/libusb-win32/src/: lusb0_usb.h  windows.c
(+301 files in other folders)
